# auto-cover-letter

./: .gitignore  Dataquest-2025.pptx  LICENSE  README.md
.github/workflows/: llm-pylint.yml
backend/: pyproject.toml
backend/latex/: compile.py  format.tex
backend/llm/: .gitignore  README.md  llm.py  pyproject.toml
backend/llm/llm/: main.py
backend/routes/: README.md  coverletter.wsgi  main.py  pyproject.toml  resume.aux
backend/scraping/: job.py  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.jsx
