[project]
name = "routes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "flash>=1.0.3",
    "flask-cors>=5.0.1",
    "openai>=1.69.0",
    "pandas>=2.2.3",
    "py2pdf>=0.1.3",
    "pypdf2>=3.0.1",
    "requests>=2.32.3",
]
